--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.consultinghm.test2">
+    package="com.consultinghm.prueba">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
@@ -16,7 +16,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.Test2" >
 
-        <activity android:name=".MainActivity" >
+        <activity android:name="com.consultinghm.prueba.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
